@@ -1,0 +1,21 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
+<T3locallang>
+    <meta type="array">
+        <type>module</type>
+        <description>Language labels for module &quot;tools_txsolradminM1&quot;</description>
+    </meta>
+    <data type="array">
+        <languageKey index="default" type="array">
+            <label index="limit">Limit records</label>
+            <label index="site">Site (http://www.example.org/)</label>
+            <label index="errorfields">Please fill the required fields</label>
+            <label index="delete">Delete 404 solr records</label>
+        </languageKey>
+        <languageKey index="fr" type="array">
+            <label index="limit">Limiter les enregistrements</label>
+            <label index="site">Site (http://www.example.org/)</label>
+            <label index="errorfields">Veuillez renseigner les enregistrements obligatoires</label>
+            <label index="delete">Supprimer les enregistremens 404 de Solr</label>
+        </languageKey>
+    </data>
+</T3locallang>
