@@ -1,3 +1,5 @@
+2012-10-29 CERDAN Yohann  <cerdanyohann@yahoo.fr>
+	* add a scheduler task to check and delete 404 solr record url
 2012-03-27 CERDAN Yohann  <cerdanyohann@yahoo.fr>
 	* add a url search field
 	* add a link for the url in each record
